kubernetes/home/apps/monitoring/kube-prometheus-stack/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.shaklab.com`, `prom.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: prometheus-prometheus
          port: 9090
  tls:
    secretName: shaklab-com-tls-certs
